# ifc_structural_mechanics

./: .gitignore  .gitmodules  CLAUDE.md  QUICK_STATUS.md  README.md  RESTART_CHECKLIST.md  SESSION_STATUS.md  VISION.md  VISUALIZATION_STATUS.md  proposal.md  pyproject.toml  setup.py  visualize.py  visualize_building.py  visualize_building_screenshot.py  visualize_from_frd.py  visualize_results.py
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: ci.yml
docs/: validation_report.md
scripts/: debug-load-groups.py  debug-loads-tool.py  ifc-entity-explorer.py  ifc-to-domain-tool.py  load-hierarchy-analyzer.py
src/ccxquery/: pyproject.toml
src/ccxquery/ccxquery/: __init__.py  __main__.py  bcs.py  displacements.py  loads.py  materials.py  node.py  reactions.py  results.py  section_forces.py  sections.py  sets.py  status.py  steps.py  stresses.py  summary.py
src/ccxquery/ccxquery/parsers/: __init__.py  dat_parser.py  frd_parser.py  inp_parser.py
src/ccxquery/tests/: conftest.py  test_cli.py  test_commands.py  test_dat_parser.py  test_frd_parser.py  test_inp_parser.py
src/ifc_structural_mechanics/: __init__.py
src/ifc_structural_mechanics/analysis/: base_parser.py  boundary_condition_handling.py  calculix_input.py  calculix_runner.py  file_writers.py  output_parser.py  results_parser.py
src/ifc_structural_mechanics/api/: __init__.py  structural_analysis.py  structural_model.py
src/ifc_structural_mechanics/cli/: __init__.py  __main__.py  commands.py
src/ifc_structural_mechanics/config/: __init__.py  analysis_config.py  base_config.py  meshing_config.py  system_config.py
src/ifc_structural_mechanics/converters/: __init__.py  calculix_types.py  section_profiles.py
src/ifc_structural_mechanics/domain/: __init__.py  base_entity.py  load.py  property.py  result.py  structural_connection.py  structural_member.py  structural_model.py
src/ifc_structural_mechanics/export/: __init__.py  results_exporter.py
src/ifc_structural_mechanics/ifc/: __init__.py  connections_extractor.py  entity_identifier.py  extractor.py  loads_extractor.py  members_extractor.py  properties_extractor.py
src/ifc_structural_mechanics/mapping/: base_mapper.py  domain_to_calculix.py  domain_to_gmsh.py  ifc_to_domain.py
src/ifc_structural_mechanics/meshing/: __init__.py  gmsh_geometry.py  gmsh_runner.py  gmsh_utils.py  mesh_converter.py  mesh_mapper.py  unified_calculix_writer.py  user_element_beam.py
src/ifc_structural_mechanics/utils/: __init__.py  error_handling.py  file_utils.py  subprocess_utils.py  temp_dir.py  units.py  validation.py
src/ifc_structural_mechanics/visualization/: __init__.py  result_visualizer.py
src/mshquery/: pyproject.toml
src/mshquery/mshquery/: __init__.py  __main__.py  groups.py  info.py  nodes.py  select.py  summary.py
src/mshquery/tests/: conftest.py  test_cli.py  test_commands.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_analysis_workflow.py  test_building_analysis.py  test_connection_equations.py  test_domain_to_calculix_integration.py  test_element_member_mapping.py  test_end_to_end.py  test_end_to_end_simple.py  test_extraction_pipeline.py  test_extraction_pipeline_real.py  test_gmsh_integration.py  test_ifc_to_geo.py  test_meshing_workflow.py  test_physical_group_mapping.py  test_results_json.py  test_temp_dir.py
tests/output/: simple_beam.geo
tests/unit/: __init__.py
tests/unit/analysis/: test_base_parser.py  test_buckling_step_writing.py  test_calculix_input.py  test_calculix_runner.py  test_correct_inp.py  test_file_writers.py  test_multi_step_writing.py  test_output_parser.py  test_results_parser.py
tests/unit/api/: test_structural_analysis.py  test_validate_model.py
tests/unit/cli/: test_commands.py
tests/unit/config/: test_analysis_config.py  test_base_config.py  test_meshing_config.py  test_system_config.py
tests/unit/converters/: test_section_profiles.py
tests/unit/domain/: __init__.py  test_base_entity.py  test_load.py  test_load_group_is_load_case.py  test_property.py  test_result.py  test_structural_connection.py  test_structural_member.py  test_structural_model.py
tests/unit/export/: test_results_exporter.py
tests/unit/ifc/: __init__.py  test_connection_releases.py  test_connections_and_load_extractor_real.py  test_connections_extractor.py  test_entity_identifier.py  test_hollow_section_extraction.py  test_loads_extractor.py  test_members_extractor.py  test_properties_extractor.py  test_simple_beam_parsing.py
tests/unit/mapping/: test_base_mapper.py  test_domain_to_calculix.py  test_domain_to_gmsh.py  test_ifc_to_domain.py
tests/unit/meshing/: test_general_section.py  test_gmsh_geometry.py  test_gmsh_runner.py  test_gmsh_utils.py  test_hinge_from_releases.py  test_mechanism_detection.py  test_mesh_converter.py  test_overlap_physical_groups.py  test_overlapping_member_fallback.py  test_pipe_box_sections.py  test_support_point_seeding.py  (+2 more)
tests/validation/: test_buckling_benchmark.py  test_cantilever_benchmark.py  test_simply_supported_benchmark.py
tests/work_dir/: README.md
(+11 files in other folders)
