[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccxquery"
version = "0.1.0"
description = "CLI tool for querying CalculiX input and output files"
keywords = ["CalculiX", "FEA", "Query"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["numpy>=1.20.0"]

[project.scripts]
ccxquery = "ccxquery.__main__:main"

[tool.setuptools.packages.find]
include = ["ccxquery*"]
